--- a/.github/workflows/njssscan.yml
+++ b/.github/workflows/njssscan.yml
@@ -15,3 +15,7 @@ jobs:
       uses: ajinabraham/njsscan-action@v5
       with:
         args: '. --sarif --output results.sarif || true'
+      name: uploaf report to github code scanning
+      uses:github/codeql-action/upload-sarif@v1
+      with:
+        sarif_files: results.sarif
