--- a/.github/workflows/njssscan.yml
+++ b/.github/workflows/njssscan.yml
@@ -16,6 +16,6 @@ jobs:
       with:
         args: '. --sarif --output results.sarif || true'
       name: uploaf report to github code scanning
-      uses:github/codeql-action/upload-sarif@v1
+      uses: github/codeql-action/upload-sarif@v1
       with:
-        sarif_files: results.sarif
+        sarif_file: results.sarif
