--- a/.github/workflows/njssscan.yml
+++ b/.github/workflows/njssscan.yml
@@ -9,13 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     name: njsscan check
     steps:
-    - uses: actions/checkout@v1
-    - name: njsscan
+      uses: actions/checkout@v1
+    - name: Checkout the code
       id: njsscan
-      uses: ajinabraham/njsscan-action@v5
+      uses: ajinabraham/njsscan-action@master
       with:
         args: '. --sarif --output results.sarif || true'
-      name: upload report to github code scanning tool
+    - name: upload report to github code scanning tool
       uses: github/codeql-action/upload-sarif@v1
       with:
         sarif_file: results.sarif
